--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - ./volumes/db-data:/var/lib/postgresql/data
     networks:
       - backend
+    ports:
+      - "5432:5432"
 
 
 networks:
