--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "babel src -d build --extensions '.ts'",
     "start": "nodemon -e ts -w src --exec \"NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "style:test": "prettier --check 'src/**/*.ts'",
+    "style:fix": "prettier --write 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,7 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.4",
+    "prettier": "^1.18.2",
     "typescript": "^3.6.4"
   },
   "dependencies": {
