Update eslint config to match with prettier and work with typescript

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
     "start": "nodemon -e ts -w src --exec \"NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "style:test": "prettier --check 'src/**/*.ts'",
-    "style:fix": "prettier --write 'src/**/*.ts'"
+    "style:fix": "prettier --write 'src/**/*.ts'",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "",
