--- a/packages/server/.eslintrc.json
+++ b/packages/server/.eslintrc.json
@@ -22,6 +22,16 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
-    "space-before-function-paren": ["error", "always"]
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_.*$",
+        "args": "after-used",
+        "argsIgnorePattern": "^_.*$",
+        "ignoreRestSiblings": true
+      }
+    ]
   }
 }
