--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "babel src -d build --extensions '.ts'",
-    "start": "nodemon -e ts -w src --exec \"NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
+    "clear-cache": "rm -rf ./node_modules/.cache/babel-loader",
+    "build": "npm run clear-cache && babel src -d build --extensions '.ts'",
+    "start": "nodemon -e ts -w src --exec \"npm run clear-cache && NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "style:test": "prettier --check 'src/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts'",
@@ -25,6 +26,7 @@
     "@types/pg": "^7.11.2",
     "@typescript-eslint/eslint-plugin": "^2.4.0",
     "@typescript-eslint/parser": "^2.4.0",
+    "babel-plugin-import-graphql": "^2.7.0",
     "chalk": "^2.4.2",
     "eslint": "^6.5.1",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -37,7 +39,9 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "apollo-server": "^2.9.7",
     "dotenv": "^8.2.0",
+    "graphql": "^14.5.8",
     "pg": "^7.12.1"
   },
   "husky": {
