improvement(gateway): add example import to graphql schema

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clear-cache": "rm -rf ./node_modules/.cache/babel-loader",
-    "build": "npm run clear-cache && babel src -d build --extensions '.ts'",
-    "start": "nodemon -e ts -w src --exec \"npm run clear-cache && NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
+    "build": "BABEL_DISABLE_CACHE=1 babel src -d build --extensions '.ts'",
+    "start": "nodemon -e ts -w src --exec \"BABEL_DISABLE_CACHE=1 NODE_ENV=development babel-node --extensions '.ts,.json' src/index.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "style:test": "prettier --check 'src/**/*.ts'",
     "style:fix": "prettier --write 'src/**/*.ts'",
