--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "apollo-server": "^2.9.7",
     "dotenv": "^8.2.0",
+    "google-auth-library": "^5.5.1",
     "graphql": "^14.5.8",
     "pg": "^7.12.1"
   },
